[package]
name = "avrorust"
version = "0.1.0"
authors = ["DZ <zakharov@ie.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[lib]
name = "avrorust"
crate_type = ["cdylib"]